--- a/html/pages/student_input.html
+++ b/html/pages/student_input.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>SAIC-GM</title>
+  <title>Sofast</title>
   <meta charset="utf-8">
   <script type="text/javascript" src="../js/allJs.js"></script>
 </head>
@@ -33,8 +33,7 @@
         </div>
         <div class="form-group">
           <label for="inputPassword3" class="col-sm-2 control-label">Date of Birth</label>
-          <div class="col-sm-4" ng-include="'/sofast/html/tmpl/datepicker.html'">
-          </div>
+          <div class="col-sm-4" ng-include="'/sofast/html/tmpl/datepicker.html'"> </div>
           <label for="inputPassword3" class="col-sm-2 control-label">Country of Birth</label>
           <div class="col-sm-4">
             <input type="text" class="form-control"> </div>
@@ -51,14 +50,13 @@
         <div ng-include="'/sofast/html/tmpl/address.html'"></div>
         <div class="form-group ">
           <label for="inputPassword3 " class="col-sm-2 control-label ">Phone Number</label>
-          <div class="col-sm-4 " ng-include="'/sofast/html/tmpl/phone.html'">
-          </div>
+          <div class="col-sm-4 " ng-include="'/sofast/html/tmpl/phone.html'"> </div>
         </div>
-        <div class="subtitle ">Father’s Name</div>
+        <div class="subtitle ">Parents' Information</div>
+        <div class="unit_title">Father’s Name</div>
         <div class="form-group ">
           <label for="inputPassword3 " class="col-sm-2 control-label ">Phone Number</label>
-          <div class="col-sm-4 " ng-include="'/sofast/html/tmpl/phone.html'">
-          </div>
+          <div class="col-sm-4 " ng-include="'/sofast/html/tmpl/phone.html'"> </div>
         </div>
         <div class="form-group ">
           <label for="inputPassword3 " class="col-sm-2 control-label ">Education</label>
@@ -69,11 +67,10 @@
           <div class="col-sm-4 ">
             <input type="text " class="form-control "> </div>
         </div>
-        <div class="subtitle ">Mother’s Name</div>
+        <div class="unit_title ">Mother’s Name</div>
         <div class="form-group ">
           <label for="inputPassword3 " class="col-sm-2 control-label ">Phone Number</label>
-          <div class="col-sm-4 " ng-include="'/sofast/html/tmpl/phone.html'">
-          </div>
+          <div class="col-sm-4 " ng-include="'/sofast/html/tmpl/phone.html'"> </div>
         </div>
         <div class="form-group ">
           <label for="inputPassword3 " class="col-sm-2 control-label ">Education</label>
@@ -120,8 +117,7 @@
             <input type="text " class="form-control "> </div>
         </div>
         <div ng-include="'/sofast/html/tmpl/school_information.html'" class="add_more"></div>
-        <div class="subtitle">Other Previous Academic Study <a class="btn btn-xs btn-link pull-right" ng-click="showMore=!showMore"><span class="glyphicon glyphicon-plus"></span> Add Academic Study</a>
-        </div>
+        <div class="subtitle">Other Previous Academic Study <a class="btn btn-xs btn-link pull-right" ng-click="showMore=!showMore"><span class="glyphicon glyphicon-plus"></span> Add Academic Study</a> </div>
         <div class="unit_title">School2</div>
         <div ng-include="'/sofast/html/tmpl/school_information.html'" class="add_more"></div>
         <div class="unit_title" ng-show="showMore">School3</div>
@@ -132,8 +128,7 @@
           <div class="form-group " ng-repeat="x in files">
             <label for="inputPassword3 " class="col-sm-3 control-label">{{x}}</label>
             <div class="col-sm-9 ">
-              <input type="file">
-            </div>
+              <input type="file"> </div>
           </div>
         </div>
         <div class="formTitle">Required Documents Checklist</div>
@@ -150,49 +145,40 @@
         <div class="form-group ">
           <label for="inputPassword3 " class="col-sm-2 control-label">Username or ID</label>
           <div class="col-sm-4 ">
-            <input type="text " class="form-control ">
-          </div>
+            <input type="text " class="form-control "> </div>
           <label for="inputPassword3 " class="col-sm-2 control-label">Password</label>
           <div class="col-sm-4 ">
-            <input type="text " class="form-control ">
-          </div>
+            <input type="text " class="form-control "> </div>
         </div>
         <div class="subtitle">TOEFL/IELTS</div>
         <div class="form-group ">
           <label for="inputPassword3 " class="col-sm-2 control-label">Username or ID</label>
           <div class="col-sm-4 ">
-            <input type="text " class="form-control ">
-          </div>
+            <input type="text " class="form-control "> </div>
           <label for="inputPassword3 " class="col-sm-2 control-label">Password</label>
           <div class="col-sm-4 ">
-            <input type="text " class="form-control ">
-          </div>
+            <input type="text " class="form-control "> </div>
         </div>
         <div class="subtitle">Other Test Account Info</div>
         <div class="form-group ">
           <label for="inputPassword3 " class="col-sm-2 control-label">Username or ID</label>
           <div class="col-sm-4 ">
-            <input type="text " class="form-control ">
-          </div>
+            <input type="text " class="form-control "> </div>
           <label for="inputPassword3 " class="col-sm-2 control-label">Password</label>
           <div class="col-sm-4 ">
-            <input type="text " class="form-control ">
-          </div>
+            <input type="text " class="form-control "> </div>
         </div>
         <div class="formTitle">Declaration</div>
         <div class="subtitle">Declaration Details</div>
         <div class="form-group article-room">
           <div class="">
-            <p>
-              I confirm that I Student Name have been duly appointed by Student Name, have permission to act on their behalf and confirm that to the best of my knowledge all the details supplied are accurate and correct. I understand that the giving of false or incomplete information may lead to the misguidance in college counselling process or refusal of admissions to colleges or cancellation of the applicant’s enrolment. I confirm that the applicant has received a copy of the terms and conditions.
-            </p>
+            <p> I confirm that I Student Name have been duly appointed by Student Name, have permission to act on their behalf and confirm that to the best of my knowledge all the details supplied are accurate and correct. I understand that the giving of false or incomplete information may lead to the misguidance in college counselling process or refusal of admissions to colleges or cancellation of the applicant’s enrolment. I confirm that the applicant has received a copy of the terms and conditions. </p>
           </div>
         </div>
         <div class="form-group button-room">
           <div class="">
             <label class="checkbox-inline">
-              <input type="checkbox"> I agree <span class="text-muted"></span>
-            </label>
+              <input type="checkbox"> I agree <span class="text-muted"></span> </label>
           </div>
         </div>
         <div class="formTitle">Counselor Brag Sheet</div>
@@ -206,8 +192,7 @@
         </div>
         <div class="form-group button-room ">
           <div class="text-center">
-            <button type="button " class="btn btn-primary btn-lg" onClick="javascript:location.href='regist_02.html ' ">
-              <span class="glyphicon glyphicon-ok "></span> Submit </button>
+            <button type="button " class="btn btn-primary btn-lg"> <span class="glyphicon glyphicon-ok "></span> Submit </button>
           </div>
         </div>
       </form>
