--- a/html/pages/student_input.html
+++ b/html/pages/student_input.html
@@ -4,14 +4,13 @@
 <head>
   <title>Sofast</title>
   <meta charset="utf-8">
-  <script type="text/javascript" src="/sofast/html/js/allJs.js"></script>
+  <script type="text/javascript" src="../js/allJs.js"></script>
 </head>
 
-<body ng-app="soFast" class="ng-scope" ng-controller="showInfo">
+<body <body ng-app="soFast" class="ng-scope" ng-controller="showInfo">
   <div class="header">
     <div>Sofast</div>
   </div>
-
   <div class="container">
     <div class="register-main well">
       <form class="form-horizontal clearfix form_container">
