clean css and change css to less

--- a/html/pages/login.html
+++ b/html/pages/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>SAIC-GM</title>
+  <title>Sofast</title>
   <meta charset="utf-8">
   <script type="text/javascript" src="/sofast/html/js/allJs.js"></script>
 </head>
@@ -10,8 +10,7 @@
 <body>
 
   <body ng-app="soFast" class="ng-scope" ng-controller="showInfo">
-    <div class="header">
-      <div>Sofast</div>
+    <div class="header" ng-include="'/sofast/html/tmpl/layout/page_header.html'">
     </div>
     <div class="container">
       <div class="login-main">
