--- a/html/pages/student_input.html
+++ b/html/pages/student_input.html
@@ -8,10 +8,8 @@
 </head>
 
 <body ng-app="soFast" class="ng-scope" ng-controller="showInfo">
-  <div class="header">
-    <div>Sofast</div>
+  <div class="header" ng-include="'/sofast/html/tmpl/layout/page_header.html'">
   </div>
-
   <div class="container">
     <div class="register-main well">
       <form class="form-horizontal clearfix form_container">
