--- a/html/pages/login.html
+++ b/html/pages/login.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <body ng-app="soFast" class="ng-scope" ng-controller="showInfo">
+  <body ng-app="soFast" class="ng-scope login_body" ng-controller="showInfo">
     <div class="header" ng-include="'/sofast/html/tmpl/layout/page_header.html'">
     </div>
     <div class="container">
@@ -40,7 +40,7 @@
           </form>
           <br/>
           <div class="">
-            <button type="button" class="btn btn-primary btn-lg btn-block" onClick="javascript:location.href='student_input.html ' "> <span class="glyphicon glyphicon-ok"></span> Login </button>
+            <button type="button" class="btn btn-primary btn-lg btn-block" onClick="javascript:location.href='admin/student_list.html ' "> <span class="glyphicon glyphicon-ok"></span> Login </button>
             <br/>
             <!--             <div class="row">
               <div class="col-sm-6"> <a href="recovery_psw_01.html">忘记密码？</a> </div>
@@ -49,6 +49,7 @@
         </div>
         <br> </div>
     </div>
+    <div class="footer" ng-include="'/sofast/html/tmpl/layout/page_footer.html'"></div>
     <script type="text/javascript"></script>
   </body>
 
